// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FellowDashboards /> should call activate account 1`] = `
<Fragment>
  <CadreFellowDashboard
    activateAccount={[Function]}
    activateCadreEngineerAccount={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "push": [MockFunction],
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    d1Engineer={
      Object {
        "email": "collins.muru@andela.com",
        "name": "collins",
      }
    }
    d1Fellow={
      Object {
        "email": "collins.muru@andela.com",
        "name": "collins",
      }
    }
    fetchAllVacancies={[MockFunction]}
    getCadreEngineers={[MockFunction]}
    history={
      Object {
        "push": [MockFunction],
      }
    }
    loading={false}
    role="CadreFellow"
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    user={
      Object {
        "name": "Test User",
        "roles": Object {
          "Andelan": "jey",
        },
      }
    }
  />
</Fragment>
`;

exports[`<FellowDashboards /> should render well 1`] = `
<FellowDashboards
  activateCadreEngineerAccount={[Function]}
  d1Fellow={
    Object {
      "account_active": false,
      "email": "chidozie.nwoga@andela.com",
      "id": 1,
    }
  }
  fetchAllVacancies={[MockFunction]}
  getCadreEngineers={[MockFunction]}
  getD1FellowProfile={[Function]}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  location={
    Object {
      "pathname": [MockFunction],
    }
  }
  role={
    Object {
      "Andelan": "jey",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
  user={
    Object {
      "name": "Test User",
      "roles": Object {
        "Andelan": "jey",
      },
    }
  }
/>
`;
